minikube/archive/manifest-service-uat.yaml
apiVersion: v1
kind: Service
metadata: 
  name: uat-service
  labels:
    app: hello-kube
  namespace: uat
spec: 
  ports: 
    - 
      nodePort: 32056
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: LoadBalancer
  selector:
    app: hello-kube
