minikube/archive/manifest-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-dev-deployment
  labels:
    app: my-dev-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-dev-app
      version: v1
  template:
    metadata:
      labels:
        app: my-dev-app
        version: v1
    spec:
      containers:
      - name: my-dev-container
        image: bipink/myapp:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata: 
  name: my-dev-service
  labels:
    app: my-dev-app
    version: v1
    env: dev
  namespace: dev
spec: 
  ports: 
    - 
      nodePort: 32056
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: LoadBalancer
  selector:
    app: my-dev-app
    version: v1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myspring-app.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prod-service
                port:
                  number: 8080
